Adiciona alterações no site Padilha Advogados, incluindo envio de e-mails, cookies, e separação de scripts

--- a/html/services.html
+++ b/html/services.html
@@ -18,6 +18,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
 </head>
 <body class="bg-gray-50">
     <!-- Navbar -->
@@ -25,10 +26,10 @@
         <div class="container mx-auto px-6 flex justify-between items-center h-16">
             <a href="#" class="text-3xl font-bold text-yellow-400 hover:text-yellow-500">Padilha Advogados</a>
             <div class="hidden md:flex space-x-8">
-                <a href="/index.html" class="hover:text-yellow-500 transition">Início</a>
-                <a href="/html/about.html" class="hover:text-yellow-500 transition">Sobre Nós</a>
-                <a href="/html/servicos.html" class="hover:text-yellow-500 transition">Serviços</a>
-                <a href="/html/talkme.html" class="hover:text-yellow-500 transition">Contato</a>
+                <a href="http://localhost:3000/#home" class="hover:text-yellow-500 transition">Início</a>
+              <a href="http://localhost:3000/sobre" class="hover:text-yellow-500 transition">Sobre Nós</a>
+              <a href="http://localhost:3000/html/services.html" class="hover:text-yellow-500 transition">Serviços</a>
+              <a href="http://localhost:3000/html/talkme.html" class="hover:text-yellow-500 transition">Fale Conosco</a>
             </div>
         </div>
     </nav>
@@ -125,8 +126,7 @@
                     <h3 class="text-lg font-semibold mb-4">Contatos</h3>
                     <ul class="space-y-2">
                         <li><a href="https://wa.me/+5551991506782" class="flex items-center text-sm text-gray-300 hover:text-white"><i class="fab fa-whatsapp mr-2"></i> WhatsApp</a></li>
-                        <li><a href="https://www.instagram.com/seuperfil" class="flex items-center text-sm text-gray-300 hover:text-white"><i class="fab fa-instagram mr-2"></i> Instagram</a></li>
-                        <li><a href="https://www.facebook.com/seuperfil" class="flex items-center text-sm text-gray-300 hover:text-white"><i class="fab fa-facebook mr-2"></i> Facebook</a></li>
+                        
                         <li><a href="mailto:jovitapadilhaadv@gmail.com" class="flex items-center text-sm text-gray-300 hover:text-white"><i class="fas fa-envelope mr-2"></i> Email</a></li>
                     </ul>
                 </div>
