--- a/html/about.html
+++ b/html/about.html
@@ -18,6 +18,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
 </head>
 <body class="bg-cover bg-center bg-fixed bg-no-repeat" style="background-image: url('/public/img/logo-atualizada-sem-fundo.png'); background-size: 50%; height: 100vh;">
     <div class="relative">
@@ -31,9 +32,9 @@
             
             <!-- Links -->
             <div class="hidden md:flex space-x-8">
-              <a href="/html/index.html" class="hover:text-yellow-500 transition">Início</a>
-              <a href="#sobre-nos" class="hover:text-yellow-500 transition">Sobre Nós</a> <!-- Link para a seção sobre -->
-              <a href="/html/services.html" class="hover:text-yellow-500 transition">Serviços</a>
+              <a href="http://localhost:3000/#home" class="hover:text-yellow-500 transition">Início</a>
+              <a href="http://localhost:3000/sobre" class="hover:text-yellow-500 transition">Sobre Nós</a><!-- Link para a seção sobre -->
+              <a href="http://localhost:3000/html/services.html" class="hover:text-yellow-500 transition">Serviços</a>
       
               <!-- Dropdown Menu -->
               <div class="relative group">
@@ -44,7 +45,7 @@
                   </svg>
                 </button>
                 <div class="absolute hidden group-hover:block bg-white text-gray-800 shadow-lg rounded-lg mt-2 w-56">
-                  <a href="/html/talkme.html" class="block px-4 py-3 hover:bg-gray-100">Fale Conosco</a>
+                  <a href="http://localhost:3000/html/talkme.html" class="hover:text-yellow-500 transition">Fale Conosco</a>
                   <a href="#email" class="block px-4 py-3 hover:bg-gray-100">Email</a>
                   <a href="#telefone" class="block px-4 py-3 hover:bg-gray-100">Telefone</a>
                 </div>
