alterações finais na pasta refactor

--- a/refactor-beta/html/about.html
+++ b/refactor-beta/html/about.html
@@ -111,6 +111,35 @@
           </div>
         </div>
       </div>
+      <div class="card">
+        <h3 class="card-titulo"><i class="fas fa-gavel"></i> Direito Trabalhista</h3>
+        <p class="card-descricao">
+          Protejo os direitos do trabalhador e também oriento empregadores sobre suas obrigações legais, lidando com casos de rescisão, horas extras e indenizações.
+        </p>
+        <ul>
+          <li>Horas extras</li>
+          <li>Indenizações trabalhistas</li>
+          <li>Ação de assédio moral</li>
+          <li>Consultoria para contratos de trabalho</li>
+        </ul>
+        <a href="#agendar-consulta" class="btn-acao">Agendar Consulta</a>
+      </div>
+      
+      <!-- Card Direito Imobiliário -->
+      <div class="card">
+        <h3 class="card-titulo"><i class="fas fa-home"></i> Direito Imobiliário</h3>
+        <p class="card-descricao">
+          Ajudarei na compra e venda de imóveis, regularização de documentos e contratos de locação. Meu objetivo é garantir segurança jurídica nas transações imobiliárias.
+        </p>
+        <ul>
+          <li>Compra e venda de imóveis</li>
+          <li>Contratos de locação</li>
+          <li>Ações de despejo</li>
+          <li>Regularização de imóveis</li>
+        </ul>
+        <a href="#agendar-consulta" class="btn-acao">Agendar Consulta</a>
+      </div>
+      
     </section>
 </section>
 
