--- a/refactor-beta/html/services.html
+++ b/refactor-beta/html/services.html
@@ -15,6 +15,7 @@
     <title>Serviços - Padilha Advogados e Associados</title>
     <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
     <link rel="stylesheet" href="/refactor-beta/css/service.css">
+    
 </head>
 <body>
 
@@ -118,6 +119,6 @@
           </div>
         </div>
       </footer>
-
+<script src="/refactor-beta/script/service.js"></script>
 </body>
 </html>
