--- a/refactor-beta/index.html
+++ b/refactor-beta/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="description" content="Site oficial de Padilha Advogados e Associados, especializado em soluções jurídicas personalizadas.">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="/refactor-beta/script/index.js"></script>
+    <!-- CSS do AOS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+<!-- JS do AOS -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
   </head>
 <body class="bg-cover">
   <div class="relative">
@@ -114,12 +120,17 @@
     <a href="#fidelidade" class="service-link">Saiba mais</a>
   </div>
 </div>
+<a href="https://wa.me/5581999999999" target="_blank" class="whatsapp-button" title="Fale conosco no WhatsApp">
+  <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" class="whatsapp-icon">
+</a>
 
 <div id="cookie-popup" class="cookie-popup">
   <div>
     <h1>Permitir Cookies</h1>
-    <p class="cookie-text">Nós usamos cookies e outras tecnologias semelhantes para melhorar a sua experiência em nossos serviços,
-       personalizar publicidade e recomendar conteúdo de seu interesse. Ao utilizar nossos serviços, você concorda com tal monitoramento.</p>
+    <p class="cookie-text">
+      Nós usamos cookies e outras tecnologias semelhantes para melhorar a sua experiência em nossos serviços,
+      personalizar publicidade e recomendar conteúdo de seu interesse. Ao utilizar nossos serviços, você concorda com tal monitoramento.
+    </p>
   </div>
   <div class="cookie-buttons">
     <button id="accept-cookies" class="accept-button">Aceitar</button>
