testantando deploy prt3

--- a/html/talkme.html
+++ b/html/talkme.html
@@ -23,16 +23,16 @@
         <div class="container">
             <a href="#" class="logo">Padilha Advogados</a>
             <div class="nav-links">
-                <a href="http://localhost:3000/" class="nav-link">
+                <a href="/index.html" class="nav-link">
                     <i class="fas fa-home"></i> Início
                 </a>
-                <a href="http://localhost:3000/sobre" class="nav-link">
+                <a href="/html/about.html" class="nav-link">
                     <i class="fas fa-info-circle"></i> Sobre Nós
                 </a>
-                <a href="http://localhost:3000/html/services.html" class="nav-link">
+                <a href="/html/services.html" class="nav-link">
                     <i class="fas fa-cogs"></i> Serviços
                 </a>
-                <a href="http://localhost:3000/html/talkme.html" class="nav-link">
+                <a href="/html/talkme.html" class="nav-link">
                     <i class="fas fa-comments"></i> Fale Conosco
                 </a>
                 
