--- a/html/about.html
+++ b/html/about.html
@@ -15,10 +15,10 @@
       <div class="container">
         <a href="#" class="logo">PADILHA ADVOGADOS</a>
         <div class="menu" id="menu">
-          <a href="/" class="menu-link">
+          <a href="/index.html" class="menu-link">
             <i class="fas fa-home"></i> Início
           </a>
-          <a href="http://localhost:3000/sobre" class="menu-link">
+          <a href="/html/about.html" class="menu-link">
             <i class="fas fa-users"></i> Sobre Nós
           </a>
           <a href="/html/services.html" class="menu-link">
