--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#home" class="menu-link">
             <i class="fas fa-home"></i> Início
           </a>
-          <a href="/html/about.html" class="menu-link">
+          <a href="/about.html" class="menu-link">
             <i class="fas fa-users"></i> Sobre Nós
           </a>
           <a href="/html/services.html" class="menu-link">
