--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
       <div class="container">
         <a href="#" class="logo">PADILHA ADVOGADOS</a>
         <div class="menu" id="menu">
-          <a href="/index.html" class="menu-link">
+          <a href="/" class="menu-link">
             <i class="fas fa-home"></i> Início
           </a>
           <a href="/html/about.html" class="menu-link">
