--- a/html/services.html
+++ b/html/services.html
@@ -27,10 +27,10 @@
       <div class="container">
         <a href="#" class="logo">PADILHA ADVOGADOS</a>
         <div class="menu" id="menu">
-          <a href="/index.html" class="menu-link">
+          <a href="/" class="menu-link">
             <i class="fas fa-home"></i> Início
           </a>
-          <a href="/html/about.html" class="menu-link">
+          <a href="/about.html" class="menu-link">
             <i class="fas fa-users"></i> Sobre Nós
           </a>
           <a href="/html/services.html" class="menu-link">
