--- a/html/talkme.html
+++ b/html/talkme.html
@@ -23,10 +23,10 @@
         <div class="container">
             <a href="#" class="logo">Padilha Advogados</a>
             <div class="nav-links">
-                <a href="/index.html" class="nav-link">
+                <a href="/" class="nav-link">
                     <i class="fas fa-home"></i> Início
                 </a>
-                <a href="/html/about.html" class="nav-link">
+                <a href="/about.html" class="nav-link">
                     <i class="fas fa-info-circle"></i> Sobre Nós
                 </a>
                 <a href="/html/services.html" class="nav-link">
