atualizado sem a function de formulario de email

--- a/index.html
+++ b/index.html
@@ -152,14 +152,16 @@
   <div class="footer-container">
     <div class="footer-grid">
       <div class="footer-left">
-        <p class="footer-text">&copy; © 2025 Padilha Advogados. Todos os direitos reservados.
+        <p class="footer-text">&copy;  2025 Padilha Advogados. Todos os direitos reservados.
           OAB: 99376/RS</p>
       </div>
       <div class="footer-right">
         <h3 class="footer-heading">Contatos</h3>
         <ul class="footer-links">
           <li><a href="https://wa.me/+5551991506782" class="footer-link"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-          <li><a href="mailto:jovitapadilhaadv@gmail.com" class="footer-link"><i class="fas fa-envelope"></i> Email</a></li>
+          <li> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=jovitapadilhaadv@gmail.com&su=Contato%20pelo%20Site&body=Prezado(a),%0A%0AEspero%20que%20este%20e-mail%20o(a)%20encontre%20bem.%0A%0AGostaria%20de%20entrar%20em%20contato%20para%20discutirmos%20sobre%20(tema%20ou%20assunto%20de%20interesse).%0A%0AFico%20no%20aguardo%20de%20sua%20resposta.%0A%0AAtenciosamente,%0A[Seu%20Nome]" class="button-email">
+            <i class="fab fa-google"></i> Enviar E-mail
+        </a></li>
         </ul>
       </div>
     </div>
