--- a/html/services.html
+++ b/html/services.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="URL_DA_IMAGEM">
     <meta property="og:url" content="URL_DO_SITE">
     <meta name="twitter:card" content="summary_large_image">
-    <title>Serviços - Padilha Advogados e Associados</title>
+    <title>Serviços - Padilha Advogados - Serviços</title>
     <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/service.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
