--- a/html/talkme.html
+++ b/html/talkme.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Padilha Advogados e Associados">
     <meta name="description" content="Fale conosco da Padilha Advogados e Associados. Entre em contato para mais informações sobre nossos serviços.">
     <meta name="keywords" content="contato, advogados, serviços jurídicos, Padilha Advogados">
-    <title>Fale Conosco - Padilha Advogados e Associados</title>
+    <title>Fale Conosco - Padilha Advogados - Fale Conosco</title>
     <link rel="icon" href="/img/logo-f.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/talkme.css">
     <link
