--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="/script/index.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="/img/logo-f.png" type="image/x-icon">
+    <title>Padilha Advogados- Home</title>
     <!-- CSS do AOS -->
 <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 <!-- JS do AOS -->
