melhoria no index.html e .css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <meta name="description" content="Site oficial de Padilha Advogados e Associados, especializado em soluções jurídicas personalizadas.">
     <link rel="stylesheet" href="./css/index.css">
     <script src="/script/index.js"></script>
@@ -67,7 +68,7 @@
         <p class="hero-text">
           Somos especialistas em combater juros abusivos e proteger os direitos dos nossos clientes em renegociações financeiras.
         </p>
-        <a href="#about" class="hero-button">Saiba Mais</a>
+        <a href="/html/about.html" class="hero-button">Saiba Mais</a>
       </div>
     </div>
   </section>
