update .css* for .html* files -> (navbars)

--- a/html/services.html
+++ b/html/services.html
@@ -13,9 +13,8 @@
     <meta property="og:url" content="URL_DO_SITE">
     <meta name="twitter:card" content="summary_large_image">
     <title>Serviços - Padilha Advogados - Serviços</title>
-    <link rel="icon" href="/img/logo-f.png" type="image/x-icon">
+    <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/service.css">
-   
 
 </head>
 <body>
@@ -58,7 +57,6 @@
             <span class="text">Fale Conosco</span>
           </a>
         </li>
-  
       </ul>
     </div>
   </div>
@@ -105,7 +103,6 @@
       <section class="localization">
         <div class="container">
           <h2>Nossa Localização</h2>
-         
         </div>
       
         <div class="container-cards">
