init resonsive mode

--- a/html/talkme.html
+++ b/html/talkme.html
@@ -13,7 +13,7 @@
   
 
 </head>
-<body>
+<body class="bg-cover">
   <div class="navigation">
     <div class="container">
       <img src="/img/apresentação 3.png" alt="logo">
