--- a/html/services.html
+++ b/html/services.html
@@ -13,8 +13,11 @@
     <meta property="og:url" content="URL_DO_SITE">
     <meta name="twitter:card" content="summary_large_image">
     <title>Serviços - Padilha Advogados - Serviços</title>
-    <link rel="icon" href="/img/img-logo-nova-guia-dourado.png" type="image/x-icon">
+    <link rel="icon" href="/img/logo-f.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/service.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+   
 
 </head>
 <body>
@@ -22,7 +25,7 @@
   <!--NavBar-->
   <div class="navigation">
     <div class="container">
-      <img src="/img/apresentação 3.png" alt="">
+      <img src="/img/apresentação 3.png" alt="">
       <ul>
         <li class="list">
           <a href="/index.html">
@@ -57,6 +60,7 @@
             <span class="text">Fale Conosco</span>
           </a>
         </li>
+  
       </ul>
     </div>
   </div>
@@ -103,6 +107,7 @@
       <section class="localization">
         <div class="container">
           <h2>Nossa Localização</h2>
+         
         </div>
       
         <div class="container-cards">
@@ -119,7 +124,7 @@
           <div class="card-address" data-aos="fade-left">
             <h3>Endereço do Escritório</h3>
             <p>Av. Borges de Medeiros, 410 <br> Sala 1214, Centro Histórico <br> Porto Alegre - RS</p>
-            <a href="https://www.google.com/maps/place/Av." target="_blank" class="btn-map">
+            <a href="https://www.google.com/maps/place/Av.+Borges+de+Medeiros,+410+-+Sala+1214+-+Centro+Histórico,+Porto+Alegre+-+RS,+90020-009/@-30.0300967,-51.2282784,19z/data=!3m1!4b1!4m6!3m5!1s0x9519790f43c78ec7:0x6c071cf628e3a67!8m2!3d-30.0300967!4d-51.2276347!16s%2Fg%2F11vw_050zy?entry=ttu&g_ep=EgoyMDI1MDEyOS4xIKXMDSoASAFQAw%3D%3D" target="_blank" class="btn-map">
               Ver no Google Maps
             </a>
           </div>
